# mps-alfi

./: .gitattributes  .gitignore  .gitmodules  LICENSE  NOTICE  README.md  alf.sh  build.gradle  build.xml  compitest_testplan.json  compitest_testplan.yaml  implemented.md  jbr11.nix  knownProblems.md  shell.nix
.github/: remove_alpha_beta_releases.py
.github/workflows/: github-actions-integration.yaml  github-actions-release.yaml  workflow-build.yaml
.mps/: modules.xml  vcs.xml
alfCode/Models/: Bar.alf  Foo.alf  Hello.alf  Test.alf  Test1.alf
devkits/alfi.all.devkit/: alfi.all.devkit.devkit
devkits/alfi.core.devkit/: alfi.core.devkit.devkit
devkits/alfi.cpp.devkit/: alfi.cpp.devkit.devkit
devkits/alfi.cs.devkit/: alfi.cs.devkit.devkit
devkits/alfi.java.devkit/: alfi.java.devkit.devkit
documentation/: alfiDocumentation.md  implemented.md  knownProblems.md
documentation/compitest/: README.md
gradle/: build-runtime-jars.gradle  compile-generator-utils.gradle  compitest.gradle  download-mps.gradle  init-gradle-scripts.gradle  install-alf.gradle  run-mps-ant.gradle
gradle/compitest/: generateCsProjFiles.gradle
gradle/wrapper/: gradle-wrapper.properties
languages/alfi.toText/: alfi.toText.mpl
scripts/compitest/: .env  conditions.py  config.py  executor.py  main.py  pyproject.toml  result.py  tester.py  testplan.py  testplanInstance.py
scripts/compitest/executors/: AlfiAlfExecutor.py  AlfiJavaExecutor.py
solutions/alfi.toCpp.sandbox/: CMakeLists.txt  alfi.toCpp.sandbox.msd
solutions/alfi.toCpp.sandbox/models/: alfi.toCpp.sandbox.mps
(+274 files in other folders)
